<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:padding="5dp"
    android:backgroundTint="@color/colorPrimary"
    android:paddingTop="50dp"
    android:layout_marginTop="0dp"
    tools:context="com.umerfarooq.AlQuran.Downloadmp3.downloadMain3Activity">

    <!--  Download Pdf Layout  -->
    <Button
        android:id="@+id/downloadPdf"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/download_Pdf"
        android:background="@color/colorPrimary"
        android:layout_marginTop="40dp"/>

    <!--  Download Doc Layout  -->
    <Button
        android:id="@+id/downloadDoc"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/download_Doc"
        android:background="@color/colorPrimary"/>

    <!--  Download Zip File Layout  -->
    <Button
        android:id="@+id/downloadZip"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/download_zip"
        android:background="@color/colorPrimary"/>

    <!--  Download Video File Layout  -->
    <Button
        android:id="@+id/downloadVideo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/download_video"
        android:background="@color/colorPrimary"/>

    <!--  Download MP3 File Layout  -->
    <Button
        android:id="@+id/downloadMp34"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/download_mp3"
        android:background="@color/colorPrimary"/>

    <!--  Open Downloaded Folder  -->
    <Button
        android:id="@+id/openDownloadedFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/openFolder"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="0dp"/>

</LinearLayout>

