<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="@color/overallbackground"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qutation"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:textColor="@color/textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qutationtwo"
        android:textSize="12sp"
     android:layout_gravity="center"
        android:textColor="@color/textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quationthree"
        android:textSize="12sp"
       android:layout_gravity="center"
        android:textColor="@color/textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quationfour"
        android:textSize="12sp"
        android:layout_gravity="center"

        android:paddingBottom="30dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/textcolor"/>


</LinearLayout>
